# intro_linear_regression_analysis

./: .envrc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: ch2.ipynb  commands.tex
src/lra/: simple_linear_regression.py  test_simple_linear_regression.py
